add scroll and change css to banner in know_us

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -8273,12 +8273,13 @@ body {
         transition: all 0.2s linear; }
 
 #body-know_us .jumbotron {
-  height: 100vh;
+  height: 550px;
   padding-top: 140px;
   background-repeat: no-repeat;
   background-size: cover;
   margin-bottom: 0;
   transition: all 0.2s linear;
+  background-size: 100% 100%;
   background-image: url(../images/img_know_us/bg_banner.png); }
   #body-know_us .jumbotron img {
     width: 110%;
@@ -8303,7 +8304,8 @@ body {
   text-align: center;
   width: 100%;
   position: absolute;
-  bottom: 26px; }
+  top: 480px;
+  cursor: pointer; }
   #body-know_us #scroll img {
     height: 130px;
     opacity: 0.5; }
@@ -8512,7 +8514,9 @@ body {
   width: 100%;
   height: 100vh; }
   #menu .modal-nav-content {
-    padding-top: 150px; }
+    height: 100%;
+    display: flex;
+    align-items: center; }
     #menu .modal-nav-content .modal-nav-body {
       position: relative;
       z-index: 100000;
